Added simple search geo extension.